reafactor: otp functionality changed implementation from redis to postgres
